--- a/boilerplate-module/build.gradle
+++ b/boilerplate-module/build.gradle
@@ -7,7 +7,7 @@ group='io.github.handharbeni'
 ext {
     // Provide your own coordinates here
     PUBLISH_GROUP_ID = 'io.github.handharbeni'
-    PUBLISH_VERSION = '1.0.3'
+    PUBLISH_VERSION = '1.0.7'
     PUBLISH_ARTIFACT_ID = 'boilerplate-module'
     PUBLISH_DESCRIPTION = 'Simple Boilerplate'
     PUBLISH_URL = 'https://github.com/handharbeni/AndroidBoilerplate'
@@ -29,13 +29,11 @@ apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
 
 android {
     namespace 'io.github.handharbeni.boilerplate_module'
-    compileSdk 32
+    compileSdk 35
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
-        versionCode 4
-        versionName "1.0.3"
+        targetSdk 35
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -51,36 +49,37 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    lintOptions {
-        baseline file("lint-baseline.xml")
+    lint {
+        baseline file('lint-baseline.xml')
     }
 }
 
 dependencies {
+//    api fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
     // Retrofit
-    api "com.squareup.retrofit2:retrofit:2.9.0"
+    api "com.squareup.retrofit2:retrofit:2.11.0"
 
     // JSON Parsing
-    api "com.google.code.gson:gson:2.9.0"
-    api "com.squareup.retrofit2:converter-gson:2.9.0"
+    api 'com.google.code.gson:gson:2.11.0'
+    api "com.squareup.retrofit2:converter-gson:2.11.0"
 
     // RX Java
     api "io.reactivex:rxjava:1.3.8"
     api "io.reactivex:rxandroid:1.2.1"
-    api "com.squareup.retrofit2:adapter-rxjava:2.9.0"
+    api 'com.squareup.retrofit2:adapter-rxjava:2.11.0'
 
     api "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
 
-    api "com.jakewharton.timber:timber:4.7.1"
+    api 'com.jakewharton.timber:timber:5.0.1'
 
-    api "com.github.bumptech.glide:glide:4.13.2"
+    api "com.github.bumptech.glide:glide:4.16.0"
 
-    api "com.github.markomilos:paginate:0.5.1"
+    api 'com.github.markomilos:paginate:1.0.0'
 }
